--- a/i18n/en.json
+++ b/i18n/en.json
@@ -12,6 +12,18 @@
     "enter-sip-uri": "Enter SIP URI",
     "enter-d-password": "Enter Password",
     "enter-contact": "Enter Contact ",
-    "enter-phone-number": "Enter Phone Number "
+    "enter-phone-number": "Enter Phone Number ",
+    "one":"1",
+    "two":"2",
+    "three":"3",
+    "four":"4",
+    "five":"5",
+    "six":"6",
+    "seven":"7",
+    "eight":"8",
+    "nine":"9",
+    "asterix":"*",
+    "zero":"0",
+    "hash":"#"
 
 }
